--- a/style.css
+++ b/style.css
@@ -177,6 +177,14 @@ a:hover {
     text-decoration: underline;
 }
 
+main #divimagem {
+    background-image: url("Imagens/pattern001.png");
+    width: 300px;
+    height: 300px;
+    border: 5px solid var(--cor02);
+    border-radius: 20px;
+}
+
 
 
 
